--- a/nfs-agent-a0labs.cfg
+++ b/nfs-agent-a0labs.cfg
@@ -3,7 +3,7 @@ enable=true
 file=/tmp/nfs-pluggin.log
 
 [NewRelicAPI]
-license_key=8db39c10875153ebf1e547031ae3c1ce5ba4313e
+license_key=
 # DO NOT TOUCH UNDER THIS PART
 # Configuration related to the official documentation
 # We assume that changing under will lead to the agent not to work properly
